Fix footer align-items to center

--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -17,6 +17,7 @@
 .footer__content {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	gap: 30px;
 
 	@include mobile {
